Ajout delete (incomplet)

--- a/package.json
+++ b/package.json
@@ -3,14 +3,29 @@
     "version": "1.0.0",
     "main": "indexr.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "./node_modules/.bin/ts-node src/server.ts",
+        "dev": "./node_modules/.bin/nodemon",
+        "build": "./node_modules/.bin -p tsconfig.json",
+        "populate": "./node_modules/.bin/ts-node bin/populate.ts"
     },
     "dependencies": {
-        "body-parser": "^1.18.2",
+        "body-parser": "^1.18.3",
         "bootstrap": "^4.1.3",
         "ejs": "^1.0.0",
+        "encoding-down": "^5.0.4",
         "express": "^4.16.2",
         "jquery": "^3.3.1",
-        "nodemon": "^1.0.0"
+        "level-ws": "^1.0.0",
+        "leveldown": "^4.0.1",
+        "levelup": "^3.1.1",
+        "nodemon": "^1.0.0",
+        "ts-node": "^7.0.1",
+        "typescript": "^3.1.6"
+    },
+    "devDependencies": {
+        "@types/express": "^4.16.0",
+        "@types/levelup": "^3.1.0",
+        "@types/node": "^10.12.9",
+        "typescript": "^3.1.6"
     }
 }
